--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="./imgs/share.png" />
+    <meta property="og:image" content="https://opendatasicilia.github.io/RSSdisegniLeggeAssembleaRegionaleSiciliana/imgs/share.png" />
     <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:image" content="./imgs/share.png"/>
+    <meta name="twitter:image" content="https://opendatasicilia.github.io/RSSdisegniLeggeAssembleaRegionaleSiciliana/imgs/share.png"/>
     <meta name="twitter:title" content="Avvisi Disegni di Legge ARS"/>
     <meta name="twitter:description" content="Per essere aggiornati sui disegni di legge dell'Assemblea Regionale Siciliana"/>
 
