--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -27,7 +27,7 @@
 
       {% if site.github.private != true %}
       <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
-        "Avvisi Disegni di Legge ARS" - Un progetto di <span title="Label: default label" class="Label bg-blue"><a class="text-white" href="https://groups.google.com/forum/#!categories/opendatasicilia" target="_blank">OpenDataSicilia</a></span>
+        "Avvisi Disegni di Legge ARS" - Un progetto di <span title="Label: default label" class="Label bg-blue"><a href="https://groups.google.com/forum/#!categories/opendatasicilia" target="_blank">OpenDataSicilia</a></span>
       </div>
       {% endif %}
     </div>
