--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -8,8 +8,8 @@
     <meta property="og:image" content="https://opendatasicilia.github.io/RSSdisegniLeggeAssembleaRegionaleSiciliana/imgs/share.png" />
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:image" content="https://opendatasicilia.github.io/RSSdisegniLeggeAssembleaRegionaleSiciliana/imgs/share.png"/>
-    <meta name="twitter:title" content="Avvisi Disegni di Legge ARS"/>
-    <meta name="twitter:description" content="Per essere aggiornati sui disegni di legge dell'Assemblea Regionale Siciliana"/>
+    <meta name="twitter:title" content="Avvisi Disegni di Legge ARS e delibere e leggi approvate"/>
+    <meta name="twitter:description" content="Per essere aggiornati sui disegni di legge dell'Assemblea Regionale Siciliana e delibere e leggi approvate"/>
 
 
 {% seo %}
